<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.har_v2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"

        />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.har_v2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.har_v2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_toilet"
        android:name="com.example.har_v2.ui.toilet.ToiletFragment"
        android:label="@string/title_toilet"
        tools:layout="@layout/fragment_toilet" />

    <fragment
        android:id="@+id/navigation_sleep"
        android:name="com.example.har_v2.ui.sleep.SleepFragment"
        android:label="@string/title_sleep"
        tools:layout="@layout/fragment_sleep" />

    <fragment
        android:id="@+id/navigation_battery"
        android:name="com.example.har_v2.ui.battery.BatteryFragment"
        android:label="@string/title_battery"
        tools:layout="@layout/fragment_battery" />

    <fragment
        android:id="@+id/navigation_bluetooth"
        android:name="com.example.har_v2.ui.bluetooth.BluetoothFragment"
        android:label="Bluetooth"
        tools:layout="@layout/fragment_bluetooth" />
</navigation>