<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bluetooth.BluetoothFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_bluetooth_fragment"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Bluetooth"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_show_paired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_button_show_paired_devices"/>

<!--    <Button-->
<!--        android:id="@+id/btn_discover"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/bt_button_discover"/>-->

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_button_connect_to_device"/>

<!--    <Button-->
<!--        android:id="@+id/btn_send"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/bt_button_send_data"/>-->

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_select_date"/>

    <Button
        android:id="@+id/btn_get_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_button_get_health_data"/>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>